# nrf5340_ex10_v2.1_gen2x

./: .gitignore  CMakeLists.txt  README.MD  nrf5340dk_nrf5340_cpuapp_ns.overlay  prj.conf
src/: main.c
src/board/: board_spec.h  driver_list.h  ex10_gpio.h  ex10_osal.h  ex10_osal_posix.h  ex10_random.h  ex10_rx_baseband_filter.h  fifo_buffer_pool.h  gnu_gcc_options.cmake  gpio_driver.h  spi_driver.h  time_helpers.h  uart_driver.h  uart_helpers.h
src/board/zephyr_rtos/: board_spec.c  board_spec_constants.h  calibration.c  calibration.h  calibration_lut_gen2x.c  calibration_lut_gen2x.h  calibration_v5.c  calibration_v5.h  driver_list.c  ex10_gpio.c  ex10_gpio.h  ex10_osal.c  ex10_print.c  ex10_random.c  ex10_rx_baseband_filter.c  ex10_rx_baseband_filter_gen2x.c  ex10_rx_baseband_filter_gen2x.h  fifo_buffer_pool.c  gpio_driver.c  rssi_compensation_lut.c  rssi_compensation_lut.h  rssi_compensation_lut_gen2x.c  rssi_compensation_lut_gen2x.h  spi_driver.c  time_helpers.c  uart_driver.c  uart_helpers.c
src/include/ex10_api/: aggregate_op_builder.h  application_register_definitions.h  application_register_field_enums.h  application_registers.h  bit_span.h  board_init.h  board_init_core.h  bootloader_register_definitions.h  bootloader_register_field_enums.h  bootloader_registers.h  byte_span.h  channel_types.h  command_transactor.h  commands.h  crc16.h  event_fifo_packet_types.h  event_fifo_printer.h  event_packet_parser.h  ex10_active_region.h  ex10_activity_sequence.h  ex10_api_strings.h  ex10_autoset_modes.h  ex10_boot_health.h  ex10_continuous_inventory_common.h  ex10_device_time.h  ex10_dynamic_power_ramp.h  ex10_event_fifo_queue.h  ex10_gen2_reply_string.h  ex10_helpers.h  ex10_inventory.h  ex10_inventory_sequence.h  ex10_macros.h  ex10_ops.h  ex10_power_modes.h  ex10_print.h  ex10_protocol.h  ex10_regulatory.h  ex10_result.h  ex10_rf_power.h  ex10_select_commands.h  (+18 more)
src/include/ex10_modules/: ex10_antenna_disconnect.h  ex10_antenna_disconnect_and_listen_before_talk.h  ex10_listen_before_talk.h  ex10_ramp_module_manager.h
src/include/ex10_regulatory/: ex10_default_region_names.h  ex10_off_time_helpers.h  ex10_regulatory_region.h
src/include/ex10_use_cases/: ex10_activity_sequence_use_case.h  ex10_continuous_inventory_power_sweep_use_case.h  ex10_continuous_inventory_start_use_case.h  ex10_continuous_inventory_use_case.h  ex10_inventory_sequence_use_case.h  ex10_tag_access_use_case.h
src/include_gen2x/ex10_api/: application_register_definitions_gen2x.h  application_register_field_enums_gen2x.h  application_registers_gen2x.h  event_fifo_packet_types_gen2x.h  event_fifo_printer_gen2x.h  ex10_autoset_modes_gen2x.h  ex10_inventory_gen2x.h  rf_mode_definitions_gen2x.h
src/include_gen2x/ex10_modules/: ex10_algo_autoset.h
src/include_gen2x/ex10_use_cases/: ex10_continuous_inventory_use_case_gen2x.h  ex10_fast_tag_tracking_use_case_gen2x.h  ex10_tag_access_use_case_gen2x.h
src/rain/: gen2x_continuous_inventory.c  getboardversion.c  simple_ramping_example.c  spitest.c
src/src/ex10_api/: aggregate_op_builder.c  application_registers.c  board_init.c  board_init_core.c  command_transactor.c  commands.c  crc16.c  event_fifo_printer.c  event_packet_parser.c  ex10_active_region.c  ex10_api_strings.c  ex10_autoset_modes.c  ex10_boot_health.c  ex10_device_time.c  ex10_dynamic_power_ramp.c  ex10_event_fifo_queue.c  ex10_gen2_reply_string.c  ex10_helpers.c  ex10_inventory.c  ex10_ops.c  ex10_power_modes.c  ex10_protocol.c  ex10_regulatory.c  ex10_result.c  ex10_result_strings.c  ex10_rf_power.c  ex10_select_commands.c  ex10_simple_example_init.c  ex10_test.c  ex10_utils.c  fifo_buffer_list.c  gen2_commands.c  gen2_tx_command_manager.c  legacy_rf_mode_converter.c  list_node.c  power_transactor.c  print_data.c  rf_mode_definitions.c  sjc_accessor.c  trace.c  (+1 more)
src/src/ex10_modules/: ex10_antenna_disconnect.c  ex10_antenna_disconnect_and_listen_before_talk.c  ex10_listen_before_talk.c  ex10_ramp_module_manager.c
src/src/ex10_regulatory/: ex10_default_region_names.c  ex10_off_time_helpers.c
src/src/ex10_regulatory/ex10_regulatory_regions/: ex10_regulatory_australia.c  ex10_regulatory_brazil.c  ex10_regulatory_china.c  ex10_regulatory_error.c  ex10_regulatory_etsi_lower.c  ex10_regulatory_etsi_upper.c  ex10_regulatory_fcc.c  ex10_regulatory_hk.c  ex10_regulatory_india.c  ex10_regulatory_indonesia.c  ex10_regulatory_israel.c  ex10_regulatory_japan_916_921_mhz.c  ex10_regulatory_korea.c  ex10_regulatory_malaysia.c  ex10_regulatory_new_zealand.c  ex10_regulatory_peru.c  ex10_regulatory_philippines.c  ex10_regulatory_russia.c  ex10_regulatory_singapore.c  ex10_regulatory_south_africa.c  ex10_regulatory_taiwan.c  ex10_regulatory_thailand.c  ex10_regulatory_uruguay.c  ex10_regulatory_vietnam.c
src/src/ex10_use_cases/: ex10_activity_sequence_use_case.c  ex10_continuous_inventory_power_sweep_use_case.c  ex10_continuous_inventory_start_use_case.c  ex10_continuous_inventory_use_case.c  ex10_inventory_sequence_use_case.c  ex10_tag_access_use_case.c
src/src/ex10_utils/: ex10_command_line.c  ex10_command_line.h  ex10_inventory_command_line.c  ex10_inventory_command_line.h  ex10_inventory_command_line_helper.c  ex10_inventory_command_line_helper.h  ex10_use_case_example_errors.c  ex10_use_case_example_errors.h
src/src_gen2x/: CMakeLists.txt
src/src_gen2x/ex10_api/: event_fifo_printer_gen2x.c  ex10_autoset_modes_gen2x.c  ex10_inventory_gen2x.c  rf_mode_definitions_gen2x.c
src/src_gen2x/ex10_modules/: ex10_algo_autoset.c
src/src_gen2x/ex10_use_cases/: ex10_continuous_inventory_use_case_gen2x.c  ex10_fast_tag_tracking_use_case_gen2x.c  ex10_tag_access_use_case_gen2x.c
toi-process/: test_toi_data.csv  toi_data.csv  toi_process.py  toi_total_read - Copy.csv  toi_total_read.csv
